# docs/swagger.yaml
@@ -3,6 +3,7 @@ definitions:
   models.Book:
     properties:
       author:
+        maxLength: 255
         type: string
       book_attrs:
         $ref: '#/definitions/models.BookAttrs'
@@ -13,6 +14,7 @@ definitions:
       id:
         type: string
       title:
+        maxLength: 255
         type: string
       updated_at:
         type: string
@@ -33,21 +35,52 @@ definitions:
       picture:
         type: string
       rating:
+        maximum: 10
+        minimum: 1
         type: integer
+    type: object
+  models.SSH:
+    properties:
+      created_at:
+        type: string
+      host:
+        maxLength: 255
+        type: string
+      id:
+        type: string
+      passwordh:
+        maxLength: 255
+        type: string
+      updated_at:
+        type: string
+      user_id:
+        type: string
+      username:
+        maxLength: 255
+        type: string
+    required:
+    - host
+    - id
+    - passwordh
+    - user_id
+    - username
     type: object
   models.User:
     properties:
       created_at:
         type: string
       email:
+        maxLength: 255
         type: string
       id:
         type: string
       password_hash:
+        maxLength: 255
         type: string
       updated_at:
         type: string
       user_role:
+        maxLength: 25
         type: string
       user_status:
         type: integer
@@ -226,6 +259,42 @@ paths:
       summary: get all exists books
       tags:
       - Books
+  /v1/ssh/create:
+    post:
+      consumes:
+      - application/json
+      description: Create a new ssh connection.
+      parameters:
+      - description: Name
+        in: body
+        name: Name
+        required: true
+        schema:
+          type: string
+      - description: Host
+        in: body
+        name: Host
+        required: true
+        schema:
+          type: string
+      - description: Password
+        in: body
+        name: Password
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.SSH'
+      security:
+      - ApiKeyAuth: []
+      summary: create a new ssh connection
+      tags:
+      - SSH
   /v1/token/renew:
     post:
       consumes:
